--- a/src/components/MovieCards.css
+++ b/src/components/MovieCards.css
@@ -18,6 +18,22 @@
     position: relative;
 }
 
+.favorite-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: transparent;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+  opacity: 0.7;
+}
+
+.favorite-btn.active {
+  color: red;
+  opacity: 1;
+}
+
 .movie-overview-container {
     position: absolute;
     bottom: 0;
